# hello

./: AGENTS.md  README.md
c/com/earlybind/: hello.c  readme.txt
c/com/latebind/: hello.c
c/com_earlybind/hello/: build.bat
c/console/hello/: build.bat
c/direct2d/triangle/: build.bat  hello.c  readme.md
c/directx10/triangle/: readme.md
c/directx11/triangle/: readme.md
c/directx12/raymarching/: readme.md
c/directx12/triangle/: hello.c  hello.hlsl
c/directx9/: hello.c  readme.txt
c/directx9/hello/: hello.c  readme.md
c/directx9/triangle/: build.bat  hello.c  readme.md  readme.txt
c/gdi/triangle/: hello.c  readme.txt
c/gdiplus/triangle/: hello.c  readme.md  readme.txt
c/hello/: hello.c
c/opengl1.0/triangle/: hello.c  readme.txt
c/opengl1.0_glfw/triangle/: hello.c
c/opengl1.0_glut/triangle/: hello.c
c/opengl1.1/triangle/: hello.c
c/opengl1.1_glfw/triangle/: hello.c
c/opengl1.1_glut/triangle/: build.bat  hello.c
c/opengl1.1_sdl/triangle/: hello.c
c/win32gui/: hello.c
cpp/hello/: hello.cpp  readme.txt
cpp/win32gui/: build.bat  hello.cpp  readme.txt
cpp_atl/win32gui/: hello.cpp
cpp_mfc/hello/: hello.cpp
cpp_mfc/win32gui/: hello.cpp
cpp_wtl/hello/: build.bat
csharp/win32gui/: readme.txt
dotnet/: AGENTS.md
html5/: index.html
html5/babylonjs/: 1-1.triangle.html  1-2.square.html  1-3.cube.html  1-4.texture.html  2-1.teapot.html  2-2.teapot.html  2-3.teapot.html  2-4.teapot.html  2-5.teapot.html  2-6.teapot.html  3-1.lissajous.html  3-2.3d_lissajous.html  3-3.harmonograph.html  3-4.3d_function.html  4-1.gltf_triangle.html  4-2.gltf_square.html  4-3.gltf_cube.html  4-4.gltf_texture.html  index.html  style.css
html5/canvas/: 1-1.graph.html  1-1.line.html  1-2.rect.html  1-2.sincurve.html  1-3.circle.html  1-3.coscurve.html  1-4.sincos.html  1-5.lissajous.html  1-6.harmonograph.html  1-7.wave.html  2-1.graph.html  2-1.koch1.html  2-2.koch2.html  2-2.sincurve.html  2-3.coscurve.html  2-3.triangle.html  2-4.sincos.html  2-4.stech.html  2-5.lissajous.html  2-5.tree.html  2-6.fern.html  2-6.harmonograph.html  2-7.ccurve.html  2-7.wave.html  2-8.dragon.html  3-1.koch1.html  3-1.space1.html  3-2.koch2.html  3-2.space2.html  3-3.space3.html  3-3.triangle.html  3-4.space4.html  3-4.stech.html  3-5.tree.html  3-6.fern.html  3-7.ccurve.html  3-8.dragon.html  4-1.cube1.html  4-1.space1.html  4-2.cube2.html  (+17 more)
html5/css/: 1-1.graph.html  1-1.line.html  1-2.rect.html  1-3.circle.html  2-1.animation.html  2-1.graph.html  3-1.animation.html  index.html
html5/svg/: 1-1.graph.html  1-1.line.html  1-2.rect.html  1-3.circle.html  2-1.animation.html  2-1.graph.html  3-1.animation.html  index.html
html5/threejs/: 1-1.triangle.html  1-2.square.html  1-3.cube.html  1-4.texture.html  2-1.teapot.html  2-2.teapot.html  2-3.teapot.html  2-4.teapot.html  2-5.teapot.html  2-6.teapot.html  3-1.lissajous.html  3-2.3d_lissajous.html  3-3.harmonograph.html  3-4.3d_function.html  index.html  style.css
html5/webgl/: 1-1.triangle.html  1-2.square.html  1-3.cube.html  1-4.texture.html  1-5.teapot.html  2-1.teapot.html  2-2.teapot.html  2-3.teapot.html  2-4.teapot.html  2-5.teapot.html  2-6.teapot.html  3-1.lissajous.html  3-2.3d_lissajous.html  3-3.harmonograph.html  3-4.3d_function.html  4-1.gltf_triangle.html  4-2.gltf_square.html  4-3.gltf_cube.html  4-4.gltf_texture.html  index.html
html5/webgl2/: 1-1.triangle.html  1-2.square.html  1-3.cube.html  1-4.texture.html  1-5.teapot.html  2-1.teapot.html  2-2.teapot.html  2-3.teapot.html  2-4.teapot.html  2-5.teapot.html  2-6.teapot.html  3-1.lissajous.html  3-2.3d_lissajous.html  3-3.harmonograph.html  3-4.3d_function.html  4-1.gltf_triangle.html  4-2.gltf_square.html  4-3.gltf_cube.html  4-4.gltf_texture.html  index.html  style_dark.css
html5/webgpu/: 1-1.triangle.html  1-2.square.html  1-3.cube.html  1-4.texture.html  1-5.teapot.html  2-1.teapot.html  2-2.teapot.html  2-3.teapot.html  2-4.teapot.html  2-5.teapot.html  2-6.teapot.html  3-1.lissajous.html  3-2.3d_lissajous.html  3-3.harmonograph.html  3-4.3d_function.html  4-1.gltf_triangle.html  4-2.gltf_square.html  4-3.gltf_cube.html  4-4.gltf_texture.html  index.html
jvm/: AGENTS.md
masm/win32gui/: build.bat  readme.txt
native_linux/: AGENTS.md
native_mac/: AGENTS.md
native_win/: AGENTS.md
native_win/cpp/webgpu_dawn/triangle/: CMakeLists.txt  build.bat  hello.cpp  install.bat
native_win/rust/direct2d/triangle/: Cargo.toml
native_win/rust/win32gui/composition/triangle_multi/: Cargo.toml  build.bat  clean.bat  readme.md
native_win/rust/win32gui/composition/triangle_multi/src/: main.rs
native_win/rust/winrt/composition/triangle_multi/: Cargo.toml  build.bat  readme.md
native_win/rust/winrt/composition/triangle_multi/src/: main.rs
native_win/rust/winui/triangle/: Cargo.toml
native_win/rust/winui/triangle/src/: main.rs
rust/directx11/triangle/: Cargo.toml
rust/directx9/triangle/: Cargo.toml
rust/directx9/triangle/src/: main.rs
rust/wgpu/triangle/: Cargo.toml  build.bat  readme.md
rust/wgpu/triangle/src/: main.rs
scripting/: AGENTS.md
wasm_rust/webgpu/triangle/: Cargo.toml  hello.js  hello_bg.wasm  index.html  readme.md
wasm_rust/webgpu/triangle/src/: main.rs
web/: AGENTS.md
(+2747 files in other folders)
