[package]
name = "hello"
version = "0.0.2"
edition = "2024"

[dependencies]
windows = { version = "0.62.2",
    features = [
        "Win32_Foundation",
        "Win32_Graphics_Direct3D9",
        "Win32_Graphics_Gdi",
        "Win32_System_LibraryLoader",
        "Win32_UI_WindowsAndMessaging",
    ]
}
