[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.10"
wgpu = "0.19.1"
bytemuck = { version = "1.4", features = ["derive"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
web-sys = { version = "0.3.67", features = ["Location"] }
wasm-bindgen-futures = "0.4.40"
env_logger = "0.10.0"
pollster = "0.3"
