[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
wgpu = "0.12.0"
bytemuck = { version = "1.4", features = ["derive"] }
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
web-sys = { version = "0.3.53", features = ["Location"] }
wasm-bindgen-futures = "0.4.29"
