[package]
name = "hello"
version = "0.0.1"
edition = "2021"

[dependencies.windows]
version = "0.58.0"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
]
