[package]
name = "hello"
version = "0.0.1"
edition = "2021"

[dependencies]
ash = { version = "0.38", default-features = false, features = ["linked", "std"] }
windows = { version = "0.62", features = [
    "Foundation_Numerics",
    "UI_Composition",
    "UI_Composition_Desktop",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_WinRT",
    "Win32_System_WinRT_Composition",
    "Win32_UI_WindowsAndMessaging",
] }

windows-numerics = "0.3"


